BUG: Утечка файлов, гонка состояний, легаси